--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -4,6 +4,7 @@ import:
 - legacy_service:endpoint_registry
 - legacy_service:generate_rsa_identity
 - legacy_service:legacy_module_resource_loader
+- legacy_service:legacy_service_resource_loader
 - legacy_service:legacy_type_resource_loader
 - legacy_service:local_modules
 - legacy_service:local_types
@@ -46,6 +47,7 @@ definitions:
       services.endpoint_registry: legacy_service:endpoint_registry
       services.generate_rsa_identity: legacy_service:generate_rsa_identity
       services.legacy_module_resource_loader: legacy_service:legacy_module_resource_loader
+      services.legacy_service_resource_loader: legacy_service:legacy_service_resource_loader
       services.legacy_type_resource_loader: legacy_service:legacy_type_resource_loader
       services.local_modules: legacy_service:local_modules
       services.local_types: legacy_service:local_types
