Implement PythonModuleResourceType.reverse_resolve, add tests

--- a/hyperapp/resource/python_module.yaml
+++ b/hyperapp/resource/python_module.yaml
@@ -4,6 +4,7 @@ import:
       - python_module
       - import_rec
       - python_module_def
+      - import_rec_def
 require:
   - resource_type_reg
   - python_object_creg
