--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -1,5 +1,6 @@
 import:
 - guesser.runner:collect_attributes
+- guesser.runner:get_resource_type
 - legacy_service:code_module_loader
 - legacy_service:endpoint_registry
 - legacy_service:generate_rsa_identity
@@ -16,9 +17,13 @@ import:
 - legacy_service:type_module_loader
 - legacy_service:web
 - legacy_type.attribute:attribute
+- legacy_type.call:call
 - legacy_type.import_discoverer:import_discoverer
 - legacy_type.import_recorder:import_recorder
 - legacy_type.import_recorder:resource
+- legacy_type.inspect:coroutine_fn_t
+- legacy_type.inspect:fn_attr
+- legacy_type.inspect:object_t
 - legacy_type.legacy_type:type
 - legacy_type.piece_ref:piece_ref
 - legacy_type.python_module:python_module
@@ -31,14 +36,23 @@ definitions:
     _type: legacy_type.piece_ref:piece_ref
     value: guesser.runner:collect_attributes
 
+  get_resource_type_ref:
+    _type: legacy_type.piece_ref:piece_ref
+    value: guesser.runner:get_resource_type
+
   update_resources.module:
     _type: legacy_type.python_module:python_module
     module_name: update_resources
     file_name: update_resources.dyn.py
     import_list:
+      htypes.attribute.attribute: legacy_type.attribute:attribute
+      htypes.call.call: legacy_type.call:call
       htypes.import_discoverer.import_discoverer: legacy_type.import_discoverer:import_discoverer
       htypes.import_recorder.import_recorder: legacy_type.import_recorder:import_recorder
       htypes.import_recorder.resource: legacy_type.import_recorder:resource
+      htypes.inspect.coroutine_fn_t: legacy_type.inspect:coroutine_fn_t
+      htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
+      htypes.inspect.object_t: legacy_type.inspect:object_t
       htypes.legacy_type.type: legacy_type.legacy_type:type
       htypes.python_module.python_module: legacy_type.python_module:python_module
       htypes.python_module.import_rec: legacy_type.python_module:import_rec
@@ -46,6 +60,7 @@ definitions:
       services.collect_attributes_ref: collect_attributes_ref
       services.endpoint_registry: legacy_service:endpoint_registry
       services.generate_rsa_identity: legacy_service:generate_rsa_identity
+      services.get_resource_type_ref: get_resource_type_ref
       services.legacy_module_resource_loader: legacy_service:legacy_module_resource_loader
       services.legacy_service_resource_loader: legacy_service:legacy_service_resource_loader
       services.legacy_type_resource_loader: legacy_service:legacy_type_resource_loader
