Update manual resources: use .module prefix

--- a/hyperapp/sync/subprocess_context.resources.yaml
+++ b/hyperapp/sync/subprocess_context.resources.yaml
@@ -10,7 +10,7 @@ import:
   - legacy_type.call:call
   - legacy_type.piece_ref:piece_ref
   - legacy_type.python_module:python_module
-  - sync.rpc_proxy:rpc_proxy_module
+  - sync.rpc_proxy:rpc_proxy.module
 
 definitions:
 
@@ -44,7 +44,7 @@ definitions:
     _type: legacy_type.piece_ref:piece_ref
     value: runner_is_ready_fn
 
-  subprocess_context_module:
+  subprocess_context.module:
     _type: legacy_type.python_module:python_module
     module_name: subprocess_context
     file_name: subprocess_context.dyn.py
@@ -57,9 +57,9 @@ definitions:
       services.rpc_call_factory: legacy_service:rpc_call_factory
       services.runner_is_ready_fn_ref: runner_is_ready_fn_ref
       services.runner_signal_queue: runner_signal_queue
-      rpc_proxy: sync.rpc_proxy:rpc_proxy_module
+      rpc_proxy: sync.rpc_proxy:rpc_proxy.module
 
   subprocess_running:
     _type: legacy_type.attribute:attribute
-    object: subprocess_context_module
+    object: subprocess_context.module
     attr_name: subprocess_running
