--- a/hyperapp/sync/rpc_proxy.resources.yaml
+++ b/hyperapp/sync/rpc_proxy.resources.yaml
@@ -6,7 +6,7 @@ import:
 
 definitions:
 
-  rpc_proxy_module:
+  rpc_proxy.module:
     _type: legacy_type.python_module:python_module
     module_name: rpc_proxy
     file_name: rpc_proxy.dyn.py
