--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -6,13 +6,13 @@ import:
   - legacy_type.attribute:attribute
   - legacy_type.piece_ref:piece_ref
   - legacy_type.python_module:python_module
-  - guesser.attr_visitor:attr_visitor_module
+  - guesser.attr_visitor:attr_visitor.module
   - guesser.load_modules:load_additional_modules
   - guesser.constructor:Constructor
-  - guesser.custom_resource_module_registry:custom_resource_module_registry_module
-  - guesser.import_resources:import_resources_module
-  - guesser.module_visitor:module_visitor_module
-  - guesser.object_visitor:object_visitor_module
+  - guesser.custom_resource_module_registry:custom_resource_module_registry.module
+  - guesser.import_resources:import_resources.module
+  - guesser.module_visitor:module_visitor.module
+  - guesser.object_visitor:object_visitor.module
   - sync.subprocess_context:subprocess_running
 
 definitions:
@@ -34,11 +34,11 @@ definitions:
       services.module_dir_list: legacy_service:module_dir_list
       services.rpc_endpoint_factory: legacy_service:rpc_endpoint_factory
       services.subprocess_running: sync.subprocess_context:subprocess_running
-      attr_visitor: guesser.attr_visitor:attr_visitor_module
-      custom_resource_module_registry: guesser.custom_resource_module_registry:custom_resource_module_registry_module
-      import_resources: guesser.import_resources:import_resources_module
-      module_visitor: guesser.module_visitor:module_visitor_module
-      object_visitor: guesser.object_visitor:object_visitor_module
+      attr_visitor: guesser.attr_visitor:attr_visitor.module
+      custom_resource_module_registry: guesser.custom_resource_module_registry:custom_resource_module_registry.module
+      import_resources: guesser.import_resources:import_resources.module
+      module_visitor: guesser.module_visitor:module_visitor.module
+      object_visitor: guesser.object_visitor:object_visitor.module
 
   construct_resources:
     _type: legacy_type.attribute:attribute
