Update manual resources: use .module prefix

--- a/hyperapp/command_line/construct_resources.resources.yaml
+++ b/hyperapp/command_line/construct_resources.resources.yaml
@@ -8,7 +8,7 @@ import:
 
 definitions:
 
-  construct_resources_module:
+  construct_resources.module:
     _type: legacy_type.python_module:python_module
     module_name: construct_resources
     file_name: construct_resources.dyn.py
@@ -20,5 +20,5 @@ definitions:
 
   construct_resources:
     _type: legacy_type.attribute:attribute
-    object: construct_resources_module
+    object: construct_resources.module
     attr_name: construct_resources
