Command list resources: remove associations

--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -41,66 +41,7 @@ import:
 - legacy_type.python_module:python_module
 - resource.global_command_ctr:global_command_ctr.module
 - resource.object_command_ctr:object_command_ctr.module
-associations:
-- _type: legacy_type.global_command:global_command_association
-  command: open_global_command_list.command
-- _type: legacy_type.global_command:global_command_association
-  command: open_view_command_list.command
-- _type: legacy_type.impl:impl_association
-  piece_t: legacy_type.command_list:global_command_list
-  ctr_fn: GlobalCommandList
-  spec: global_command_list_spec
-- _type: legacy_type.impl:impl_association
-  piece_t: legacy_type.command_list:object_command_list
-  ctr_fn: ObjectCommandList
-  spec: object_command_list_spec
-- _type: legacy_type.impl:impl_association
-  piece_t: legacy_type.command_list:view_command_list
-  ctr_fn: ViewCommandList
-  spec: view_command_list_spec
-- _type: legacy_type.impl:python_object_association
-  t: legacy_type.command_list:global_command_list
-  function: GlobalCommandList
-- _type: legacy_type.impl:python_object_association
-  t: legacy_type.command_list:object_command_list
-  function: ObjectCommandList
-- _type: legacy_type.impl:python_object_association
-  t: legacy_type.command_list:view_command_list
-  function: ViewCommandList
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - global_command_list_d
-  - object_commands_d
-  value: global_command_list.set_key.command
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - global_command_list_d
-  - object_commands_d
-  value: global_command_list.set_key_escape.command
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - object_command_list_d
-  - object_commands_d
-  value: object_command_list.set_key.command
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - object_command_list_d
-  - object_commands_d
-  value: object_command_list.set_key_escape.command
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - object_commands_d
-  value: open_object_commands.command
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - view_command_list_d
-  - object_commands_d
-  value: view_command_list.set_key.command
-- _type: legacy_type.lcs:lcs_set_association
-  dir:
-  - view_command_list_d
-  - object_commands_d
-  value: view_command_list.set_key_escape.command
+associations: []
 definitions:
   GlobalCommandList:
     _type: legacy_type.attribute:attribute
