--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -2,6 +2,7 @@ import:
 - guesser.runner:collect_attributes
 - guesser.runner:get_resource_type
 - guesser.utils:utils.module
+- legacy_service:builtin_types
 - legacy_service:code_module_loader
 - legacy_service:endpoint_registry
 - legacy_service:generate_rsa_identity
@@ -21,6 +22,7 @@ import:
 - legacy_type.attribute:attribute
 - legacy_type.call:call
 - legacy_type.command:object_commands_d
+- legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
 - legacy_type.import_discoverer:import_discoverer
 - legacy_type.import_discoverer:using_incomplete_object
@@ -28,6 +30,7 @@ import:
 - legacy_type.import_recorder:resource
 - legacy_type.inspect:coroutine_fn_t
 - legacy_type.inspect:fn_attr
+- legacy_type.inspect:list_t
 - legacy_type.inspect:object_t
 - legacy_type.lcs:lcs_set_association
 - legacy_type.legacy_type:type
@@ -58,6 +61,7 @@ definitions:
       htypes.attribute.attribute: legacy_type.attribute:attribute
       htypes.call.call: legacy_type.call:call
       htypes.command.object_commands_d: legacy_type.command:object_commands_d
+      htypes.impl.list_spec: legacy_type.impl:list_spec
       htypes.impl.method_command_impl: legacy_type.impl:method_command_impl
       htypes.import_discoverer.import_discoverer: legacy_type.import_discoverer:import_discoverer
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
@@ -65,6 +69,7 @@ definitions:
       htypes.import_recorder.resource: legacy_type.import_recorder:resource
       htypes.inspect.coroutine_fn_t: legacy_type.inspect:coroutine_fn_t
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
+      htypes.inspect.list_t: legacy_type.inspect:list_t
       htypes.inspect.object_t: legacy_type.inspect:object_t
       htypes.lcs.lcs_set_association: legacy_type.lcs:lcs_set_association
       htypes.legacy_type.type: legacy_type.legacy_type:type
@@ -72,6 +77,7 @@ definitions:
       htypes.partial.partial: legacy_type.partial:partial
       htypes.python_module.python_module: legacy_type.python_module:python_module
       htypes.python_module.import_rec: legacy_type.python_module:import_rec
+      services.builtin_types: legacy_service:builtin_types
       services.code_module_loader: legacy_service:code_module_loader
       services.collect_attributes_ref: collect_attributes_ref
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
