Legacy type resources: add builtin_types_as_dict service

--- a/hyperapp/resource/legacy_type.yaml
+++ b/hyperapp/resource/legacy_type.yaml
@@ -3,6 +3,7 @@ import:
     legacy_type:
       - type
 provide:
+  - builtin_types_as_dict
   - legacy_type_resource_loader
   - resource.legacy_type
 require:
