--- a/hyperapp/guesser/update_resources.resources.yaml
+++ b/hyperapp/guesser/update_resources.resources.yaml
@@ -5,6 +5,7 @@ import:
 - legacy_service:builtin_types_as_dict
 - legacy_service:code_module_loader
 - legacy_service:endpoint_registry
+- legacy_service:hyperapp_dir
 - legacy_service:generate_rsa_identity
 - legacy_service:legacy_module_resource_loader
 - legacy_service:legacy_service_resource_loader
@@ -90,6 +91,7 @@ definitions:
       services.collect_attributes_ref: collect_attributes_ref
       services.constructor_creg: resource.constructor_creg:constructor_creg.service
       services.endpoint_registry: legacy_service:endpoint_registry
+      services.hyperapp_dir: legacy_service:hyperapp_dir
       services.generate_rsa_identity: legacy_service:generate_rsa_identity
       services.get_resource_type_ref: get_resource_type_ref
       services.legacy_module_resource_loader: legacy_service:legacy_module_resource_loader
