--- a/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
@@ -1,4 +1,5 @@
 import:
+- common.mark:mark.service
 - legacy_service:mosaic
 - legacy_service:peer_registry
 - legacy_service:rpc_call_factory
@@ -7,39 +8,66 @@ import:
 - legacy_type.builtin:int
 - legacy_type.command:object_commands_d
 - legacy_type.construct_resources_sample:sample
+- legacy_type.construct_resources_sample:sample_global_command_d
 - legacy_type.construct_resources_sample:sample_item
-- legacy_type.construct_resources_sample:sample_servant_d
-- legacy_type.construct_resources_sample:sample_servant_open_d
-- legacy_type.construct_resources_sample:sample_servant_parent_d
+- legacy_type.construct_resources_sample:sample_list_d
+- legacy_type.construct_resources_sample:sample_list_open_d
+- legacy_type.construct_resources_sample:sample_list_parent_d
+- legacy_type.construct_resources_sample:sample_object_command_d
+- legacy_type.global_command:global_command_association
+- legacy_type.impl:global_command_impl
 - legacy_type.impl:impl_association
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
+- legacy_type.impl:object_command_impl
 - legacy_type.impl:python_object_association
 - legacy_type.lcs:lcs_set_association
 - legacy_type.python_module:python_module
 associations:
+- _type: legacy_type.global_command:global_command_association
+  command: sample_global_command.command
 - _type: legacy_type.impl:impl_association
   piece_t: legacy_type.construct_resources_sample:sample
-  ctr_fn: SampleServant
-  spec: sample_servant_spec
+  ctr_fn: SampleList
+  spec: SampleList.spec
 - _type: legacy_type.impl:python_object_association
   t: legacy_type.construct_resources_sample:sample
-  function: SampleServant
+  function: SampleList
 - _type: legacy_type.lcs:lcs_set_association
   dir:
-  - sample_servant_d
   - object_commands_d
-  value: sample_servant.open.command
+  value: sample_object_command.command
 - _type: legacy_type.lcs:lcs_set_association
   dir:
-  - sample_servant_d
+  - sample_list_d
   - object_commands_d
-  value: sample_servant.parent.command
+  value: SampleList.open.command
+- _type: legacy_type.lcs:lcs_set_association
+  dir:
+  - sample_list_d
+  - object_commands_d
+  value: SampleList.parent.command
 definitions:
-  SampleServant:
+  SampleList:
     _type: legacy_type.attribute:attribute
     object: construct_resources_sample.module
-    attr_name: SampleServant
+    attr_name: SampleList
+  SampleList.open.command:
+    _type: legacy_type.impl:method_command_impl
+    method: open
+    params:
+    - current_key
+    dir: sample_list_open_d
+  SampleList.parent.command:
+    _type: legacy_type.impl:method_command_impl
+    method: parent
+    params: []
+    dir: sample_list_parent_d
+  SampleList.spec:
+    _type: legacy_type.impl:list_spec
+    key_attribute: key
+    key_t: legacy_type.builtin:int
+    dir: sample_list_d
   construct_resources_sample.module:
     _type: legacy_type.python_module:python_module
     module_name: construct_resources_sample
@@ -47,39 +75,39 @@ definitions:
     import_list:
       htypes.construct_resources_sample.sample: legacy_type.construct_resources_sample:sample
       htypes.construct_resources_sample.sample_item: legacy_type.construct_resources_sample:sample_item
+      services.mark: common.mark:mark.service
       services.mosaic: legacy_service:mosaic
       services.peer_registry: legacy_service:peer_registry
       services.rpc_call_factory: legacy_service:rpc_call_factory
       services.web: legacy_service:web
   object_commands_d:
     _type: legacy_type.command:object_commands_d
-  sample:
+  sample_global_command:
     _type: legacy_type.attribute:attribute
     object: construct_resources_sample.module
-    attr_name: sample
-  sample_command:
+    attr_name: sample_global_command
+  sample_global_command.command:
+    _type: legacy_type.impl:global_command_impl
+    function: sample_global_command
+    dir: sample_global_command_d
+  sample_global_command_d:
+    _type: legacy_type.construct_resources_sample:sample_global_command_d
+  sample_list_d:
+    _type: legacy_type.construct_resources_sample:sample_list_d
+  sample_list_open_d:
+    _type: legacy_type.construct_resources_sample:sample_list_open_d
+  sample_list_parent_d:
+    _type: legacy_type.construct_resources_sample:sample_list_parent_d
+  sample_object_command:
     _type: legacy_type.attribute:attribute
     object: construct_resources_sample.module
-    attr_name: sample_command
-  sample_servant.open.command:
-    _type: legacy_type.impl:method_command_impl
-    method: open
+    attr_name: sample_object_command
+  sample_object_command.command:
+    _type: legacy_type.impl:object_command_impl
+    function: sample_object_command
     params:
-    - current_key
-    dir: sample_servant_open_d
-  sample_servant.parent.command:
-    _type: legacy_type.impl:method_command_impl
-    method: parent
-    params: []
-    dir: sample_servant_parent_d
-  sample_servant_d:
-    _type: legacy_type.construct_resources_sample:sample_servant_d
-  sample_servant_open_d:
-    _type: legacy_type.construct_resources_sample:sample_servant_open_d
-  sample_servant_parent_d:
-    _type: legacy_type.construct_resources_sample:sample_servant_parent_d
-  sample_servant_spec:
-    _type: legacy_type.impl:list_spec
-    key_attribute: key
-    key_t: legacy_type.builtin:int
-    dir: sample_servant_d
+    - piece
+    - view_state
+    dir: sample_object_command_d
+  sample_object_command_d:
+    _type: legacy_type.construct_resources_sample:sample_object_command_d
